--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
 
     <button type="submit">Submit</button>
   </form>
+    <!-- Checkbox -->
+<form>
 
+  <label>
+    <input class="checkbox" type="checkbox" /> Agree
+  </label>
+  
+</form>
   <!-- <script src="index.js"></script> -->
 
 </body>
