--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
 
     <button type="submit">Submit</button>
   </form>
-    <!-- Checkbox -->
-<form>
 
+<!-- Checkbox -->
+<form class="agree-form">
   <label>
     <input class="checkbox" type="checkbox" /> Agree
   </label>
-  
+</form>
+
+<!-- Select Birthdate -->
+<form>
+  <label for="birthdate">Select your birthdate:</label>
+  <input type="date" id="birthdate" name="birthdate">
 </form>
   <!-- <script src="index.js"></script> -->
 
